--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <h1>Hello, welcome to jtjones.org!</h1>
   <p>Thanks for stopping by</p>
   <img src="assets/images/me.JPG" alt="A picture of me">
+  <p>Hi Alden</p>
 </body>
 </html>
